<resources>
    <string name="app_name">Attendance</string>
    <string name="title_activity_take_attendance">TakeAttendance</string>
    <string name="tab_text_1">ATTENDANCE</string>
    <string name="tab_text_2">STUDENTS</string>
    <string name="tab_text_3">HISTORY</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="go_back_to_parent_activity">Go back to parent activity</string>
    <string name="create_account">Don\'t have an account? Create one here.</string>
</resources>