<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddFaculty">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_name"
        android:textSize="@dimen/text_size"
        android:hint="@string/first_name"
        android:layout_margin="@dimen/margin"
        android:autofillHints=""
        android:inputType="textPersonName|textCapWords" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/last_name"
        android:textSize="@dimen/text_size"
        android:hint="@string/last_name"
        android:layout_margin="@dimen/margin"
        android:inputType="textPersonName|textCapWords"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:textSize="@dimen/text_size"
        android:hint="@string/phone"
        android:layout_margin="@dimen/margin"
        android:inputType="phone"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:textSize="@dimen/text_size"
        android:hint="@string/address"
        android:layout_margin="@dimen/margin"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:textSize="@dimen/text_size"
        android:hint="@string/username"
        android:layout_margin="@dimen/margin"
        android:inputType="textCapSentences"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:textSize="@dimen/text_size"
        android:hint="@string/password"
        android:layout_margin="@dimen/margin"
        android:inputType="textPassword"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:text="@string/submit"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>